# eq_microservice

./: LICENSE.txt  README.md  app.db  logic.py  logic_storage.py  main.py  models.py  pyproject.toml  schemas.py
app/: crud.py  database.py  logic.py  main.py  models.py  schemas.py
app/files/8a7449a17ed4859bdcde53563ec3b3cb/: math.txt
tests/: app.db  test_create_user.py  test_files_by_date.py  test_last_uploaded_files.py  test_storage.py  test_upload_files.py
tests/test_files/: test.txt
turkey_eq_monitor/: Makefile  Pipfile  README.md  setup.py
turkey_eq_monitor/tests/: test_processing.py
turkey_eq_monitor/turkey_eq_monitor/: processing.py
turkey_eq_monitor/turkey_eq_monitor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
